update test and documentation method

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,8 @@ name: module test
 # This workflow runs the pipeline with the minimal test dataset to check that it completes without any syntax errors
 on:
   push:
+    branches:
+      - master
     paths:
       - 'VERSION.config'
   pull_request:
