--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
       - name: Run pipeline with test data
         run: |
           nextflow run ${GITHUB_WORKSPACE}/test.nf
+          cp results/*.html ./
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@releases/v3
