add module bwa_index and bwa_mem

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 params {
   input = "https://raw.githubusercontent.com/jianhong/chipseq/master/assets/design.csv"
-  conda = true
+  enable_conda = true
   outdir = "./results"
 }
 
